# cartridges

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: full.yaml  smoke.yaml
data/wikipedia_history_us/: data.txt  eval_spec.json  metadata.json
data/wikipedia_india/: data.txt
examples/: demo_corpus.txt  demo_questions.txt  india_wikipedia_20_eval_spec.json  india_wikipedia_8192.metadata.json
plans/: cartridge_implementation.md
reports/: india_wikipedia_8192_comparison.md
reports/templates/: comparison_report.md
scripts/: check_env.py  compat_check.py  demo_cartridge_qa.py  eval_baseline.py  eval_cartridge.py  prepare_arxiv_smoke.py  prepare_niah.py  run_benchmark.py  run_demo_example.py  run_india_wikipedia_benchmark.py  run_local_repro.py  serve_vllm.py  synthesize_self_study.py  train_cartridge.py
src/cartridges/: __init__.py  config.py
src/cartridges/benchmarks/: __init__.py  text_benchmark.py  wikipedia_qa.py
src/cartridges/clients/: __init__.py  vllm_openai.py
src/cartridges/core/: __init__.py  cartridge.py
src/cartridges/data/: __init__.py  arxiv_smoke.py  common.py  niah.py  text_dataset.py
src/cartridges/demo/: __init__.py  qa.py
src/cartridges/eval/: __init__.py  baseline.py  cartridge.py  common.py  reporting.py
src/cartridges/models/: __init__.py
src/cartridges/synthesis/: __init__.py  self_study.py
src/cartridges/train/: __init__.py  cartridge.py
tests/: test_cartridge_cache.py  test_eval_common.py  test_text_benchmark.py  test_text_dataset.py  test_train_cartridge.py
(+6 files in other folders)
