[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cartridges-local"
version = "0.1.0"
description = "Clean single-GPU reproduction scaffold for Cartridges."
readme = "plans/cartridge_implementation.md"
requires-python = ">=3.12"
dependencies = [
  "numpy>=2.1,<3",
  "pydantic>=2.11,<3",
  "PyYAML>=6.0,<7",
  "rich>=13.9,<14",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.10,<2",
  "datasets>=4.1,<5",
  "einops>=0.8,<1",
  "huggingface_hub>=0.34,<1",
  "safetensors>=0.6,<1",
  "sentencepiece>=0.2,<1",
  "torch==2.10.0",
  "transformers==4.57.6",
  "wandb>=0.20,<1",
]
infer = [
  "openai>=2.0.0,<3",
  "vllm==0.19.0",
]
dev = [
  "pytest>=8.4,<9",
  "pytest-xdist>=3.8,<4",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cartridges"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
